fix dark mode link color

--- a/docs/site.css
+++ b/docs/site.css
@@ -276,7 +276,7 @@ pre code {
 		background: #121212;
 	}
 
-	body, h1 a {
+	body, h2 a {
 		color: #C9D1D9!important;
 	}
 
